tests/ui/typeck/issue-13853-2.stderr
error[E0615]: attempted to take value of method `get` on type `Box<(dyn ResponseHook + 'static)>`
  --> $DIR/issue-13853-2.rs:5:43
   |
LL | fn foo(res : Box<dyn ResponseHook>) { res.get }
   |                                           ^^^ method, not a field
   |
help: use parentheses to call the method
   |
LL | fn foo(res : Box<dyn ResponseHook>) { res.get() }
   |                                              ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0615`.
